--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 Flask==0.9
+Flask-SQLAlchemy==0.16
 Jinja2==2.6
+SQLAlchemy==0.8.0b2
 Werkzeug==0.8.3
 distribute==0.6.28
 gunicorn==0.17.2
+psycopg2==2.4.6
 requests==1.1.0
 simplejson==3.0.7
 wsgiref==0.1.2
